force-app/main/default/objects/Milestone1_Milestone__c/fields/Actual_Hours_From_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_From_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calculated from time records related to tasks on child milestones</inlineHelpText>
    <label>Actual Hours From Sub-Milestones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>