force-app/main/default/objects/Milestone1_Milestone__c/fields/Actual_Hours_From_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_From_Tasks__c</fullName>
    <inlineHelpText>Calculated from time records related to tasks on this milestone</inlineHelpText>
    <label>Actual Hours From Tasks</label>
    <summarizedField>Milestone1_Task__c.Total_Hours__c</summarizedField>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>