force-app/main/default/objects/Milestone1_Milestone__c/fields/Complete_Tasks_in_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Complete_Tasks_in_Tasks__c</fullName>
    <inlineHelpText>Number of complete tasks related to this milestone</inlineHelpText>
    <label>Complete Tasks (in Tasks)</label>
    <summaryFilterItems>
        <field>Milestone1_Task__c.Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>