force-app/main/default/objects/Milestone1_Milestone__c/fields/Estimated_Hours_From_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_From_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
    <label>Estimated Hours From Sub-Milestones</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>