force-app/main/default/objects/Milestone1_Milestone__c/fields/Hours_Budget__c.field-meta.xml
<CustomField>
    <fullName>Hours_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The hours budget for the milestone.</inlineHelpText>
    <label>Milestone Hours Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>