force-app/main/default/objects/Milestone1_Milestone__c/fields/Hours_Budget_from_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Hours_Budget_from_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total hours budget for all the sub milestones for this milestone.</inlineHelpText>
    <label>Hours Budget from Sub-Milestones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>