force-app/main/default/objects/Milestone1_Milestone__c/fields/ImportID__c.field-meta.xml
<CustomField>
    <fullName>ImportID__c</fullName>
    <inlineHelpText>An Import ID used during the XML export/import process only.</inlineHelpText>
    <label>Import ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>