force-app/main/default/objects/Milestone1_Milestone__c/fields/Late_Tasks_in_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Late_Tasks_in_Tasks__c</fullName>
    <inlineHelpText>Number of incomplete and overdue tasks related to this milestone</inlineHelpText>
    <label>Late Tasks (in Tasks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>