force-app/main/default/objects/Milestone1_Milestone__c/fields/NameClean__c.field-meta.xml
<CustomField>
    <fullName>NameClean__c</fullName>
    <description>Formula designed to keep a Gantt safe chart name.  Note: this field may be discontinued.</description>
    <formula>SUBSTITUTE(Name, &apos;&quot;&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameClean</label>
    <type>Text</type>
</CustomField>