force-app/main/default/objects/Milestone1_Milestone__c/fields/Okay_to_Reparent__c.field-meta.xml
<CustomField>
    <fullName>Okay_to_Reparent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A hidden field used to prevent users from manually moving Milestones to different Projects</description>
    <label>Okay to Reparent</label>
    <type>Checkbox</type>
</CustomField>