force-app/main/default/objects/Milestone1_Milestone__c/fields/Predecessor_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The milestone which must be complete before you start this one. The Predecessor Milestone end date must be before the current Milestone start date.</inlineHelpText>
    <label>Predecessor Milestone</label>
    <lookupFilter>
        <active>true</active>
        <developerName>nf_01IE0000000HT73MAG_00NE0000000nwUIMAY</developerName>
        <filterItems>
            <field>Milestone1_Milestone__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Successor Milestones</relationshipLabel>
    <relationshipName>Successor_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>