force-app/main/default/objects/Milestone1_Milestone__c/fields/Project_Kickoff_Offset__c.field-meta.xml
<CustomField>
    <fullName>Project_Kickoff_Offset__c</fullName>
    <formula>NULLVALUE(Kickoff__c -  Project__r.Kickoff__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many days after project kickoff does this milestone kickoff?</inlineHelpText>
    <label>Project Kickoff Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>