force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Actual_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Expense__c</fullName>
    <formula>Actual_Expense_From_Tasks__c + Actual_Expense_From_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from expense records on tasks for this milestone and all child milestones</inlineHelpText>
    <label>Total Actual Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>