force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Hours__c</fullName>
    <formula>Actual_Hours_From_Tasks__c + Actual_Hours_From_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from time records on tasks for this milestone and all child milestones</inlineHelpText>
    <label>Total Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>