force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Blocked_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Blocked_Tasks__c</fullName>
    <formula>Blocked_Tasks_in_Tasks__c +  Blocked_Tasks_in_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
    <label>Total Blocked Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>