force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Complete_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Complete_Tasks__c</fullName>
    <formula>Complete_Tasks_in_Tasks__c  +  Complete_Tasks_in_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Complete Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>