force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Estimated_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Expense__c</fullName>
    <formula>Estimated_Expense_From_Tasks__c + Estimated_Expense_From_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
    <label>Total Estimated Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>