force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Expense_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Balance__c</fullName>
    <formula>Total_Estimated_Expense__c - Total_Actual_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as total estimated expense - total actual expense</inlineHelpText>
    <label>Total Expense Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>