force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Expense_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Budget__c</fullName>
    <formula>Expense_Budget__c +  Expense_Budget_from_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as expense budget + expense budget from sub milestones</inlineHelpText>
    <label>Total Expense Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>