force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Hours_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Balance__c</fullName>
    <formula>Total_Estimated_Hours__c - Total_Actual_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as total estimated hours - total actual hours</inlineHelpText>
    <label>Total Hours Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>