force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Hours_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Budget__c</fullName>
    <formula>Hours_Budget__c + Hours_Budget_from_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as hours budget + hours budget from sub milestones</inlineHelpText>
    <label>Total Hours Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>