force-app/main/default/objects/Milestone1_Milestone__c/fields/Total_Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Tasks__c</fullName>
    <formula>Open_Tasks_in_Tasks__c + Open_Tasks_in_Sub_Milestones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of incomplete tasks related to this milestone and its child milestones</inlineHelpText>
    <label>Total Open Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>