force-app/main/default/objects/Milestone1_Milestone__c/validationRules/Alias_must_not_contain_spaces.validationRule-meta.xml
<ValidationRule>
    <fullName>Alias_must_not_contain_spaces</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(TRIM(Alias__c ),&quot; &quot;)</errorConditionFormula>
    <errorDisplayField>Alias__c</errorDisplayField>
    <errorMessage>The Milestone Alias cannot contain spaces.</errorMessage>
</ValidationRule>