force-app/main/default/objects/Milestone1_Milestone__c/validationRules/CanNotAddSubmilestoneToParentCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotAddSubmilestoneToParentCompleted</fullName>
    <active>true</active>
    <errorConditionFormula>Parent_Milestone__r.Complete__c</errorConditionFormula>
    <errorDisplayField>Parent_Milestone__c</errorDisplayField>
    <errorMessage>You can not add milestones to parent milestones with status completed.</errorMessage>
</ValidationRule>