force-app/main/default/objects/Milestone1_Milestone__c/validationRules/CannotBeCompleteWithOpenTasks.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotBeCompleteWithOpenTasks</fullName>
    <active>true</active>
    <errorConditionFormula>if( and(Complete__c == true, Total_Open_Tasks__c &gt; 0), true, false)</errorConditionFormula>
    <errorDisplayField>Complete__c</errorDisplayField>
    <errorMessage>You cannot mark a milestone as complete if it has open tasks.</errorMessage>
</ValidationRule>