force-app/main/default/objects/Milestone1_Milestone__c/validationRules/Deadline_within_project_boundaries.validationRule-meta.xml
<ValidationRule>
    <fullName>Deadline_within_project_boundaries</fullName>
    <active>false</active>
    <errorConditionFormula>if ( and (Deadline__c &lt;&gt; null, Project__r.Deadline__c &lt;&gt;  null, Deadline__c &gt; Project__r.Deadline__c) , true, false)</errorConditionFormula>
    <errorDisplayField>Deadline__c</errorDisplayField>
    <errorMessage>Deadline must be less than or equal to the project deadline.</errorMessage>
</ValidationRule>