force-app/main/default/objects/Milestone1_Milestone__c/validationRules/Milestone_must_have_parent_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_must_have_parent_record</fullName>
    <active>true</active>
    <description>Milestone records must always have a parent Project and/or a parent Milestone</description>
    <errorConditionFormula>ISBLANK(Project__c) &amp;&amp; ISBLANK(Parent_Milestone__c)</errorConditionFormula>
    <errorMessage>Please select a parent Project, a parent Milestone, or both.</errorMessage>
</ValidationRule>