force-app/main/default/objects/Milestone1_Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Milestone__c</columns>
    <columns>Project__c</columns>
    <columns>Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>